# mybevytest

./: .gitignore  CLAUDE.md
android/: gradlew  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mybevy/project/: MainActivity.java
android/gradle/: libs.versions.toml
docs/: UI框架执行任务.md  UI框架自研清单.md  bevy-getting-started.md
project/: Cargo.toml
project/assets/ui/i18n/: en_us.ron  zh_cn.ron
project/assets/ui/themes/: default.ron
project/src/: lib.rs  main.rs
project/src/authority/: plugin.rs
project/src/config/: window.rs
project/src/game/: mod.rs  plugin.rs
project/src/game/screens/auth/: login.rs  mod.rs
project/src/game/screens/dev/: ui_gallery.rs
project/src/game/screens/lobby/: game_list.rs
project/src/game/ui/: debug.rs  i18n.rs  mod.rs
project/src/game/ui/core/: binding.rs  focus.rs  framework.rs  input.rs  layer.rs  mod.rs  panel.rs  stats.rs  viewport.rs
project/src/game/ui/overlays/: loading.rs  mod.rs  modal.rs  router.rs  toast.rs
project/src/game/ui/style/: theme.rs
project/src/game/ui/widgets/: controls.rs  mod.rs  scroll.rs
project/src/network/: mod.rs  runtime.rs  types.rs
