[package]
name = "project"
version = "0.1.0"
edition = "2024"

[lib]
name = "project"
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy = "0.18.1"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio_kcp = "0.9.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
